# satysfi-fonts-material-icons

./: .gitignore  README.md  Satyristes  convert_icon_names.py  fonts.satysfi-hash  generate.py  satysfi-fonts-material-icons-doc.opam  satysfi-fonts-material-icons.opam
doc/: manual.saty
doc/data/: outlined.satyh  round.satyh  sharp.satyh  twotone.satyh
src/: fonts-material-icons.satyh
src/icon/: normal.satyh  outlined.satyh  round.satyh  sharp.satyh  twotone.satyh
