opam-version: "2.0"
name: "satysfi-fonts-material-icons"
version: "1.0.0"
synopsis: "SATySFi Font Package for Google Material Icons"
description: """
SATySFi Font Package for Google Material Icons
"""
maintainer: "Mogami Shinichi <cmonaqa@gmail.com>"
authors: "Mogami Shinichi <cmonaqa@gmail.com>"
license: "Apache-2.0"
homepage: "https://github.com/monaqa/satysfi-fonts-material-icons"
dev-repo: "git+https://github.com/monaqa/satysfi-fonts-material-icons.git"
bug-reports: "https://github.com/monaqa/satysfi-fonts-material-icons/issues"

extra-source "MaterialIconsOutlined-Regular.otf" {
  src: "https://github.com/google/material-design-icons/raw/9a68a7b2aa5131c31afd822fa796322754802bfb/font/MaterialIconsOutlined-Regular.otf"
}
extra-source "MaterialIconsRound-Regular.otf" {
  src: "https://github.com/google/material-design-icons/raw/9a68a7b2aa5131c31afd822fa796322754802bfb/font/MaterialIconsRound-Regular.otf"
}
extra-source "MaterialIconsSharp-Regular.otf" {
  src: "https://github.com/google/material-design-icons/raw/9a68a7b2aa5131c31afd822fa796322754802bfb/font/MaterialIconsSharp-Regular.otf"
}
extra-source "MaterialIconsTwoTone-Regular.otf" {
  src: "https://github.com/google/material-design-icons/raw/9a68a7b2aa5131c31afd822fa796322754802bfb/font/MaterialIconsTwoTone-Regular.otf"
}

depends: [
  "satysfi" { >= "0.0.6" & < "0.0.8" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }
]
build: []
install: [
  ["satyrographos" "opam" "install"
   "--name" "fonts-material-icons"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
